--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "indivisual",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,8 +10,18 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "particle.js": "^1.0.7",
     "particles": "^0.3.1",
     "particles.js": "^2.0.0",
     "save": "^2.3.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JBennyHuang/IndiVisual.git"
+  },
+  "bugs": {
+    "url": "https://github.com/JBennyHuang/IndiVisual/issues"
+  },
+  "homepage": "https://github.com/JBennyHuang/IndiVisual#readme",
+  "description": ""
 }
