--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
+    "jquery": "^3.4.1",
     "particle.js": "^1.0.7",
     "particles": "^0.3.1",
     "particles.js": "^2.0.0",
