--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
-    "particle.js": "^1.0.7",
-    "particles": "^0.3.1",
-    "particles.js": "^2.0.0",
-    "save": "^2.3.3"
+    "particles.js": "^2.0.0"
   },
   "repository": {
     "type": "git",
@@ -24,5 +21,6 @@
     "url": "https://github.com/JBennyHuang/IndiVisual/issues"
   },
   "homepage": "https://github.com/JBennyHuang/IndiVisual#readme",
-  "description": ""
+  "description": "1. Install <a href = \"https://nodejs.org/en/download/\" target=\"_blank\"> Node.JS </a>",
+  "devDependencies": {}
 }
