--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "particles.js": "^2.0.0",
+    "popper.js": "^1.15.0",
     "python-shell": "^1.0.7"
   },
   "repository": {
