Moved the PCApi to the 'services' directory

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jquery": "^3.4.1",
     "particles.js": "^2.0.0",
     "popper.js": "^1.15.0",
-    "python-shell": "^1.0.7"
+    "request": "^2.88.0"
   },
   "repository": {
     "type": "git",
