--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.3.1",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
+    "nodemon": "^1.19.1",
     "particles.js": "^2.0.0",
     "popper.js": "^1.15.0",
     "python-shell": "^1.0.7"
