--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
     "jquery": "^3.4.1",
     "particles.js": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.15.0",
     "request": "^2.88.0"
   },
